style: dash skeleton and scrollbar fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,7 +79,6 @@
 html,
 body {
   overflow-x: hidden;
-  height: 100%;
 }
 
 html {
